feat: enhance tracking functionality and update landing page with tracking CTA

--- a/src/app/default-layout/default-layout.html
+++ b/src/app/default-layout/default-layout.html
@@ -2,6 +2,9 @@
   class="flex flex-col min-h-screen bg-surface-50 dark:bg-surface-900 text-surface-900 dark:text-surface-100"
 >
   <app-default-top-nav></app-default-top-nav>
-  <router-outlet />
+  <main class="container mx-auto">
+    <router-outlet />
+
+  </main>
   <app-default-footer></app-default-footer>
 </div>
